# MagicClaw

./: .gitignore  README.md  pyproject.toml
magic_claw/: cli.py  config.py  hardware.py  paths.py  state.py  status.py
magic_claw/agent/: __init__.py  loop.py  tools.py  workspace.py
magic_claw/models/: __init__.py  catalog.py  downloader.py  profiles.py  recent.py
magic_claw/runtime/: __init__.py  llama_binary.py  llama_server.py  supervisor.py
magic_claw/telegram/: __init__.py  bot.py  setup.py
magic_claw/ui/: __init__.py  console.py
scripts/: run.bat  run.ps1
tests/: test_agent_loop.py  test_cli.py  test_profiles.py  test_state.py  test_telegram_bot.py  test_telegram_setup.py  test_workspace_focus.py
